--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_contribute">ContributeActivity</string>
     <string name="title_activity_loading">LoadingActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
